--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Beta2 
	- Fixed print_tags.inc file to catalog matching, now fuzzy like it
		should be
	- Fixed bug where file pattern would be ignored if there were no
		tags in file
	- Replaced " " with "\s" on Pattern Match Logic
	- Removed extra space on default Last.FM username/password
	- Fixed LastFM plugin username and password checking to not even try
		if there is no username or password

--------------------------------------------------------------------------
  v.3.4-Beta1 12/25/2007 
	- Added Metadata (.directory or desktop.ini) when using the 
		/bin/dump_album_art.inc file
	- Added 'Add New...' option to Album on Song Edit (Thx picasso)
	- Fixed multiple login check 
	- Fixed filters applying incorrectly to non-browse displays
	- Fixed Flash Player issue when Playlist Method wasn't default
	- Fixed XML-RPC, now uses handshake method properly
	- Fixed bug where stream would start even with no songs
	- Upgraded to Prototype 1.6
	- Added playlists and playlist_songs methods to API
	- Fixed a problem with the javascript that was causing Opera to not
		get the playlist correctly. 
	- Migrated to 'new' auth system that unifies xml-rpc,api and normal
		sessions in a single table
	- Fixed some issues with downsampling + seeking and seeking in 
		general (Thx Karl Hungus) 
	- Fixed CSS references to missing files
	- Fixed Missing Levels on Edit and incorrect level on edit
	- Added check to make sure timestamp passed to API is less then
		four hours old. Set to four hours to allow for some 
		difference in server/client time
	- Fixed basic XML-RPC functionality, using insecure / old 
		authentication method needs more work